5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3812/executions/1595_1571.log
== SUBMITION (2019-03-25 11:31:45) 
-- CODE:
mgs = input('digite a mensagem: ')
msg = msg.upper()
print(msg)

-- EXECUTION TIME:
0.127124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1571/main.py", line 2, in <module>
    msg = msg.upper()
NameError: name 'msg' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:31:48) 
-- CODE:
mgs = input('digite a mensagem: ')
msg = msg.upper()
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    msg = msg.upper()
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:32:02) 
-- CODE:
msg = input('digite a mensagem: ')
msg = msg.upper()
print(msg)

-- EXECUTION TIME:
0.14758
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:56:08) 
-- CODE:
msg = input('digite a mensagem: ')
msg = msg.upper()
print(msg)

-- EXECUTION TIME:
0.141994
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
